[package]
name = "patty"
version = "0.1.0"
authors = ["Syd Pao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["cargo", "derive"] }
pest = "2.7.1"
pest-ast = "0.3.4"
pest_derive = "2.7.1"
